cm-pod.yml
#######
## 1) Config Map als YAML Datei + Pod mit Env Var. die aus dem config Map kommt.
## 2) Vorhandene Config Map und Secret generiert aus einer Datei und in Pod als Volume injected.
#######
---
apiVersion: v1
kind: Pod
metadata:
  name: config-map-pod
spec:
  containers:
    - name: cm-container
      image: nginx
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-web-server
  labels:
    type: frontned
spec:
  containers:
    - name: config-map-volume
      image: nginx
      volumeMounts:
      - name: config-volume
        mountPath: /etc/nginx/conf.d/
      - name: frontend
        mountPath: /usr/share/nginx/html/public/frontend
  volumes:
    - name: config-volume
      configMap:
        name: nginx-conf        # muss angelegt werden
    - name: frontend
      configMap:
        name: frontend
  restartPolicy: Never
