initcont.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-init-container
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 5600']
