pod-2-containers.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-multiple-pod
  labels:
    app: my-multiple-pod
spec:
  containers:
  - name: myapp
    image: nginx
  - name: mysecondapp
    image: hello-world
