pod-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: envpod
  labels:
    app: envpod
spec:
  containers:
  - name: envpod
    image: nginx
