pod-priority-class.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-test
spec:
  replicas: 5
  selector:
    matchLabels:
      env: test
  template:
    metadata:
      labels:
        env: test
    spec:
      containers:
      - name: test
        image: nginx
      priorityClassName: low

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-dev
spec:
  replicas: 5
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
      - name: dev
        image: nginx
      priorityClassName: high
