pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myfirstpod
  labels:
    app: demoPod
spec:
  containers:
  - name: myapp
    image: nginx
