secret-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: secret
spec:
  containers:
  - name: nginx
    image: nginx
  restartPolicy: Never
