beispiel-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    ncp/internal_ip_for_policy: 100.64.112.53
  creationTimestamp: "2020-09-14T11:26:21Z"
  labels:
    app: service
  name: lb-service
  namespace: default
  resourceVersion: "681489"
  selfLink: /api/v1/namespaces/default/services/lb-service
  uid: 1230cc21-4fc2-412b-b7cd-b6ebff386fc3
spec:
  clusterIP: 10.100.200.80
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30337
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.4.49.8
