microservices-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: apache
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      run: apache
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: apache
    spec:
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-apache:latest
        name: apache
        ports:
        - containerPort: 80
        resources: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: catalog
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      run: catalog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: catalog
    spec:
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-catalog:latest
        name: catalog
        ports:
        - containerPort: 8080
        resources: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: customer
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      run: customer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: customer
    spec:
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-customer:latest
        name: customer
        ports:
        - containerPort: 8080
        resources: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      run: order
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: order
    spec:
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-order:latest
        name: order
        ports:
        - containerPort: 8080
        resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: apache
  name: apache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: apache
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: catalog
  name: catalog
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: catalog
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: customer
  name: customer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: customer
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: order
  name: order
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: order
  type: LoadBalancer
status:
  loadBalancer: {}
