node-port.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-node-port
  namespace: default
spec:
  ports:
  - nodePort: 31040
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  sessionAffinity: None
  type: NodePort
