ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nsx"
    ncp/use-regex: "True"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: e2m.example.local
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: nginx
          servicePort: 80
